--- a/WebForm/Pages/Shared/QuanLyGia.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia.cshtml
@@ -33,18 +33,58 @@
                             catch (Exception e) { }
                         }
                         <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyGia_Them">Thêm</a>
-                        <form class="form-inline" method="get">
-                            <select class="form-control">
-                                <option value="Id_Gia">Mã Giá</option>
+                        <form class="form-inline" method="post">
+                            @{
+                                try
+                                {
+                                    string search = "";
+                                    switch (HttpContext.Session.GetString("searchtype"))
+                                    {
+                                        case "Id_Tour":
+                                            search = HttpContext.Session.GetString("search");
+                                            list_g = list_g.FindAll(x => x.Id_Tour.Contains(search));
+                                            HttpContext.Session.Remove("searchtype");
+                                            HttpContext.Session.Remove("search");
+                                            break;
+                                        case "Gia":
+                                            search = HttpContext.Session.GetString("search");
+                                            list_g = list_g.FindAll(x => x.Gia == search);
+                                            HttpContext.Session.Remove("searchtype");
+                                            HttpContext.Session.Remove("search");
+                                            break;
+                                        case "ngay":
+                                            string dt1 = HttpContext.Session.GetString("dt1");
+                                            string dt2 = HttpContext.Session.GetString("dt2");
+                                            Tool tool = new Tool();
+                                            List<GiaDTO> listtmp = new List<GiaDTO>();
+                                            foreach (GiaDTO item in list_g)
+                                            {
+                                                if (tool.comparedate(item.Thoigianbatdau, dt1) >= 0
+                                                    && tool.comparedate(item.Thoigianketthuc, dt2) <= 0)
+                                                    listtmp.Add(item);
+                                            }
+                                            list_g = listtmp;
+                                            HttpContext.Session.Remove("searchtype");
+                                            HttpContext.Session.Remove("dt1");
+                                            HttpContext.Session.Remove("dt2");
+                                            break;
+                                        default:
+                                            break;
+                                    }
+
+                                }
+                                catch (Exception e) { }
+                            }
+                            <select class="form-control" asp-for="searchtype">
                                 <option value="Id_Tour">Mã Tour</option>
                                 <option value="Gia">Giá</option>
                             </select>
-                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Tìm kiếm">
-                            <input type="button" class="btn btn-warning" value="Tìm" style="margin-left:">
-                            <input type="date" class="form-control mb-2 mr-sm-2" style="margin-left:5px" placeholder="Thời gian bắt đầu">
+                            <input type="text" asp-for="searchvalue" class="form-control mb-2 mr-sm-2" style="margin-left:" placeholder="Tìm kiếm">
+                            <input type="submit" asp-page-handler="search" class="btn btn-warning" value="Tìm" style="margin-left:">
+                            <input type="date" asp-for="dt1" class="form-control mb-2 mr-sm-2" style="margin-left:5px" placeholder="Thời gian bắt đầu">
                             <p>Tới</p>
-                            <input type="date" class="form-control mb-2 mr-sm-2" style="margin-left:5px" placeholder="Thời gian kết thúc">
-                            <input type="submit" value="Tìm" class="btn btn-primary mr-2" />
+                            <input type="date" asp-for="dt2" class="form-control mb-2 mr-sm-2" style="margin-left:5px" placeholder="Thời gian kết thúc">
+                            <input type="submit" asp-page-handler="searchdate" value="Tìm" class="btn btn-primary mr-2" />
                         </form>
                         <div class="table-responsive">
                             <table class="table table-striped">
