--- a/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
@@ -24,15 +24,23 @@
                         @{
                             try
                             {
-                                if (HttpContext.Session.GetString("xoadiadiem") == "thanhcong")
+                                <!---------------------Thông báo Thêm----------------------------------------------->
+                                if (HttpContext.Session.GetString("xoadiadiem") == "true")
                                 {
                                     <h5 style="background-color: forestgreen">Xóa thành công</h5>
                                     HttpContext.Session.Remove("xoadiadiem");
                                 }
-                                else if (HttpContext.Session.GetString("xoadiadiem") == "khongthanhcong")
+                                <!---------------------Thông báo Thêm----------------------------------------------->
+                                if (HttpContext.Session.GetString("themdiadiem") == "true")
                                 {
-                                    <h5 style="background-color: forestgreen">Không được xóa do vẫn còn trong tour</h5>
-                                    HttpContext.Session.Remove("xoadiadiem");
+                                    <h5 style="background-color: forestgreen">Thêm thành công</h5>
+                                    HttpContext.Session.Remove("themdiadiem");
+                                }
+                                <!---------------------Thông báo Thêm----------------------------------------------->
+                                if (HttpContext.Session.GetString("suadiadiem") == "true")
+                                {
+                                    <h5 style="background-color: forestgreen">Sửa thành công</h5>
+                                    HttpContext.Session.Remove("suadiadiem");
                                 }
 
                             }
@@ -85,12 +93,12 @@
                                                 <td>@item.Id_DiaDiem</td>
                                                 <td>@item.Ten_DiaDiem</td>
                                                 <form asp- method="post">
-                                                    <td>
-                                                        <input type="hidden" asp-for="diadiem.Id_DiaDiem" value="@item.Id_DiaDiem" />
-                                                        <input type="hidden" asp-for="diadiem.Ten_DiaDiem" value="@item.Ten_DiaDiem" />
-                                                        <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
-                                                        <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
-                                                    </td>
+                                                <td>
+                                                    <input type="hidden" asp-for="diadiem.Id_DiaDiem" value="@item.Id_DiaDiem" />
+                                                    <input type="hidden" asp-for="diadiem.Ten_DiaDiem" value="@item.Ten_DiaDiem" />
+                                                    <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                    <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
+                                                </td>
                                                 </form>
                                             </tr>
                                         }
