--- a/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
@@ -24,10 +24,23 @@
                         @{
                             try
                             {
-                                if (HttpContext.Session.GetString("xoanhanvien") == "thanhcong")
+                                <!---------------------Thông báo Xóa----------------------------------------------->
+                                if (HttpContext.Session.GetString("xoanhanvien") == "true")
                                 {
                                     <h5 style="background-color: forestgreen">Xóa thành công</h5>
                                     HttpContext.Session.Remove("xoanhanvien");
+                                }
+                                <!---------------------Thông báo Thêm----------------------------------------------->
+                                if (HttpContext.Session.GetString("themnhanvien") == "true")
+                                {
+                                    <h5 style="background-color: forestgreen">Thêm thành công</h5>
+                                    HttpContext.Session.Remove("themnhanvien");
+                                }
+                                <!---------------------Thông báo Sửa----------------------------------------------->
+                                if (HttpContext.Session.GetString("suanhanvien") == "true")
+                                {
+                                    <h5 style="background-color: forestgreen">Sửa thành công</h5>
+                                    HttpContext.Session.Remove("suanhanvien");
                                 }
                             }
                             catch (Exception e) { }
