--- a/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
@@ -23,10 +23,23 @@
                         @{
                             try
                             {
-                                if (HttpContext.Session.GetString("xoaphancong") == "thanhcong")
+                                <!---------------------Thông báo Xóa----------------------------------------------->
+                                if (HttpContext.Session.GetString("xoaphancong") == "true")
                                 {
                                     <h5 style="background-color: forestgreen">Xóa thành công</h5>
                                     HttpContext.Session.Remove("xoaphancong");
+                                }
+                                <!---------------------Thông báo Thêm----------------------------------------------->
+                                if (HttpContext.Session.GetString("themphancong") == "true")
+                                {
+                                    <h5 style="background-color: forestgreen">Thêm thành công</h5>
+                                    HttpContext.Session.Remove("themphancong");
+                                }
+                                <!---------------------Thông báo Sửa----------------------------------------------->
+                                if (HttpContext.Session.GetString("suaphancong") == "true")
+                                {
+                                    <h5 style="background-color: forestgreen">Sửa thành công</h5>
+                                    HttpContext.Session.Remove("suaphancong");
                                 }
                             }
                             catch (Exception e) { }
