--- a/WebForm/Pages/Shared/QuanLyTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyTour.cshtml
@@ -27,15 +27,27 @@
                         @{
                             try
                             {
-                                if (HttpContext.Session.GetString("xoatour") == "thanhcong")
+                                if (HttpContext.Session.GetString("xoatour") == "true")
                                 {
                                     <h4 style="background-color: forestgreen">Xóa thành công</h4>
                                     HttpContext.Session.Remove("xoatour");
                                 }
-                                else if (HttpContext.Session.GetString("xoatour") == "khongthanhcong")
+                                else if (HttpContext.Session.GetString("suatour") == "false")
                                 {
                                     <h4 style="background-color: forestgreen">Không được xóa do vẫn còn trong tour</h4>
-                                    HttpContext.Session.Remove("xoatour");
+                                    HttpContext.Session.Remove("suatour");
+                                }
+
+                                if (HttpContext.Session.GetString("themtour") == "true")
+                                {
+                                    <h4 style="background-color: forestgreen">Thêm thành công</h4>
+                                    HttpContext.Session.Remove("themtour");
+                                }
+
+                                if (HttpContext.Session.GetString("suatour") == "true")
+                                {
+                                    <h4 style="background-color: forestgreen">Sửa thành công</h4>
+                                    HttpContext.Session.Remove("suatour");
                                 }
 
                             }
