--- a/WebForm/Pages/Shared/QuanLyDoan_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan_Sua.cshtml
@@ -24,7 +24,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Đoàn</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Đoàn</label>
                                 <input type="text" asp-for="doan.Id_Doan" value="@obj.Id_Doan" class="form-control" readonly/>
