--- a/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
@@ -27,19 +27,19 @@
                                 <!---------------------Thông báo Xóa----------------------------------------------->
                                 if (HttpContext.Session.GetString("xoakhachhang") == "true")
                                 {
-                                    <h5 style="background-color: forestgreen">Xóa thành công</h5>
+                                    <h5 style="color: red">Xóa thành công</h5>
                                     HttpContext.Session.Remove("xoakhachhang");
                                 }
                                 <!---------------------Thông báo Thêm----------------------------------------------->
                                 if (HttpContext.Session.GetString("themkhachhang") == "true")
                                 {
-                                    <h5 style="background-color: forestgreen">Thêm thành công</h5>
+                                    <h5 style="color: green">Thêm thành công</h5>
                                     HttpContext.Session.Remove("themkhachhang");
                                 }
                                 <!---------------------Thông báo Sửa----------------------------------------------->
                                 if (HttpContext.Session.GetString("suakhachhang") == "true")
                                 {
-                                    <h5 style="background-color: forestgreen">Sửa thành công</h5>
+                                    <h5 style="color: saddlebrown">Sửa thành công</h5>
                                     HttpContext.Session.Remove("suakhachhang");
                                 }
                             }
