--- a/WebForm/Pages/Shared/QuanLyGia_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia_Sua.cshtml
@@ -10,6 +10,11 @@
 @{
     var str = HttpContext.Session.GetString("editgia");
     var obj = JsonConvert.DeserializeObject<GiaDTO>(str);
+
+    var parsedDate1 = DateTime.ParseExact(obj.Thoigianbatdau, "dd/MM/yyyy", System.Globalization.CultureInfo.InvariantCulture);
+    obj.Thoigianbatdau = parsedDate1.ToString("yyyy-MM-dd", System.Globalization.CultureInfo.InvariantCulture);
+    var parsedDate2 = DateTime.ParseExact(obj.Thoigianketthuc, "dd/MM/yyyy", System.Globalization.CultureInfo.InvariantCulture);
+    obj.Thoigianketthuc = parsedDate2.ToString("yyyy-MM-dd", System.Globalization.CultureInfo.InvariantCulture);
 }
 <div class="main-panel">
     <div class="content-wrapper">
@@ -21,30 +26,27 @@
                         <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Giá</label>
-                                <input type="text" class="form-control" asp-for="gia.Id_Gia" value="@obj.Id_Gia" 
+                                <input type="text" class="form-control" value="@obj.Id_Gia" asp-for="gia.Id_Gia"
                                        placeholder="Mã Giá" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Tour</label>
-                                <input type="text" class="form-control" asp-for="gia.Id_Tour" value="@obj.Id_Tour" 
-                                       placeholder="Mã Tour" readonly>
+                                <select asp-for="loai" asp-items="@(new SelectList(Model.listtour,"Id_Tour", "Ten_Tour"))">
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giá</label>
-                                <input type="text" class="form-control" asp-for="gia.Gia" value="@obj.Gia"
-                                       placeholder="Giá">
+                                <input type="number" class="form-control" value="@obj.Gia" asp-for="gia.Gia" placeholder="Giá" required>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thời gian bắt đầu</label>
-                                <input type="text" class="form-control" asp-for="gia.Thoigianbatdau" value="@obj.Thoigianbatdau"
-                                       placeholder="Thời gian bắt đầu">
+                                <input type="date" class="form-control" value="@obj.Thoigianbatdau" asp-for="gia.Thoigianbatdau" placeholder="Thời gian bắt đầu" required>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Thời gian kết thúc</label>
-                                <input type="text" class="form-control" asp-for="gia.Thoigianketthuc" value="@obj.Thoigianketthuc"
-                                       placeholder="Thời gian kết thúc">
+                                <input type="date" class="form-control" value="@obj.Thoigianketthuc" asp-for="gia.Thoigianketthuc" placeholder="Thời gian kết thúc" required>
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Sửa</button>
+                            <input type="submit" value="Sửa" asp-page-handler="edit" class="btn btn-primary mr-2" />
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
