--- a/WebForm/Pages/Shared/QuanLyGia_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia_Them.cshtml
@@ -23,10 +23,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Tour</label>
-                                <select class="js-example-basic-single w-100" asp-for="gia.Id_Tour">
-                                    <option value="T01">T01</option>
-                                    <option value="T02">T02</option>
-                                    <option value="T03">T03</option>
+                                <select asp-for="gia.Id_Tour" asp-items="@(new SelectList(Model.listtour,"Id_Tour", "Ten_Tour"))">
                                 </select>
                             </div>
                             <div class="form-group">
