--- a/WebForm/Pages/Shared/QuanLyDoan_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan_Sua.cshtml
@@ -51,7 +51,7 @@
                                 <textarea class="form-control" asp-for="noidung" id="exampleTextarea1" rows="4" placeholder="Nội dung Đoàn">
                                        </textarea>
                             </div>
-                            <input type="submit" asp-page-handler="Edit" value="Sửa" class="btn btn-primary mr-2" />
+                            <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-primary mr-2" />
                             <input type="submit" asp-page-handler="Cancel" class="btn btn-light" value="Hủy" />
                         </form>
                     </div>
