--- a/WebForm/Pages/Shared/QuanLyDoan.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan.cshtml
@@ -21,30 +21,35 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Đoàn Du Lịch</h4>
+                        @{
+                            try
+                            {
+                                <!---------------------Thông báo Xóa----------------------------------------------->
+                                if (HttpContext.Session.GetString("xoadoan") == "true")
+                                {
+                                    <h5 style="color:red">Xóa thành công</h5>
+                                    HttpContext.Session.Remove("xoadoan");
+                                }
+                                <!---------------------Thông báo Thêm----------------------------------------------->
+                                if (HttpContext.Session.GetString("themdoan") == "true")
+                                {
+                                    <h5 style="color: green">Thêm thành công</h5>
+                                    HttpContext.Session.Remove("themdoan");
+                                }
+                                <!---------------------Thông báo Sửa----------------------------------------------->
+                                if (HttpContext.Session.GetString("suadoan") == "true")
+                                {
+                                    <h5 style="color: saddlebrown">Sửa thành công</h5>
+                                    HttpContext.Session.Remove("suadoan");
+                                }
+                            }
+                            catch (Exception e) { }
+                        }
                         <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyDoan_Them">Thêm</a>
                         <form class="form-inline" method="post">
                             @{
                                 try
                                 {
-                                    <!---------------------Thông báo Xóa----------------------------------------------->
-                                    if (HttpContext.Session.GetString("xoadoan") == "true")
-                                    {
-                                        <h5 style="color:red">Xóa thành công</h5>
-                                        HttpContext.Session.Remove("xoadoan");
-                                    }
-                                    <!---------------------Thông báo Thêm----------------------------------------------->
-                                    if (HttpContext.Session.GetString("themdoan") == "true")
-                                    {
-                                        <h5 style="color: green">Thêm thành công</h5>
-                                        HttpContext.Session.Remove("themdoan");
-                                    }
-                                    <!---------------------Thông báo Sửa----------------------------------------------->
-                                    if (HttpContext.Session.GetString("suadoan") == "true")
-                                    {
-                                        <h5 style="color: saddlebrown">Sửa thành công</h5>
-                                        HttpContext.Session.Remove("suadoan");
-                                    }
-
                                     string search = "";
                                     switch (HttpContext.Session.GetString("searchtype"))
                                     {
