--- a/WebForm/Pages/Shared/QuanLyDoan_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan_Them.cshtml
@@ -26,7 +26,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Tour</label>
-                                <select class="js-example-basic-single w-100" 
+                                <select class="form-control" 
                                         asp-for="doan.Id_Tour" asp-items="@(new SelectList(Model.listtour,"Id_Tour", "Ten_Tour"))" >
                                 </select>
                             </div>
