--- a/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang_Them.cshtml
@@ -39,7 +39,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Số điện thoại</label>
-                                <input type="text" class="form-control" asp-for="khachhang.Sdt_Khach" placeholder="Số điện thoại">
+                                <input type="number" class="form-control" asp-for="khachhang.Sdt_Khach" placeholder="Số điện thoại">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Quốc tịch</label>
