--- a/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien_Them.cshtml
@@ -27,11 +27,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Email</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Email_NV" placeholder="Email">
+                                <input type="email" class="form-control" asp-for="nhanvien.Email_NV" placeholder="Email">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Số điện thoại</label>
-                                <input type="text" class="form-control" asp-for="nhanvien.Sdt_NV" placeholder="Số điện thoại">
+                                <input type="number" class="form-control" asp-for="nhanvien.Sdt_NV" placeholder="Số điện thoại">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giới tính</label>
