--- a/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
@@ -18,23 +18,24 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Sửa Phân Công</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Đoàn</label>
-                                <input type="text" class="form-control" asp-for="phancong.Id_Doan" value="@obj.Id_Doan" 
-                                       placeholder="Mã Đoàn" readonly>
+                                <select asp-for="iddoan" asp-items="@(new SelectList(Model.listdoan,"Id_Doan", "Id_Doan"))">
+                                </select>
+                                <input type="hidden"  asp-for="phancong.Id_Doan" value="@obj.Id_Doan"/>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
-                                <input type="text" class="form-control" asp-for="phancong.Id_NV" value="@obj.Id_NV"
-                                       placeholder="Mã Nhân Viên" readonly>
+                                <select asp-for="idnv" asp-items="@(new SelectList(Model.listnv,"Id_NV", "Id_NV"))">
+                                </select>
+                                <input type="hidden" asp-for="phancong.Id_NV" value="@obj.Id_NV" />
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Nhiệm vụ</label>
-                                <input type="text" class="form-control" asp-for="phancong.Nhiemvu" value="@obj.Nhiemvu" 
-                                       placeholder="Nhiệm vụ">
+                                <input type="text" class="form-control" value="@obj.Nhiemvu" asp-for="phancong.Nhiemvu" placeholder="Nhiệm vụ">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Sửa</button>
+                            <input type="submit" value="Sửa" asp-page-handler="edit" class="btn btn-primary mr-2" />
                             <button class="btn btn-light">Hủy</button>
                         </form>
                     </div>
